Fixed weird gap with navbar bottom

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+body::before {
+    display: block;
+    content: '';
+    height: 50px;
+}
+
+
+
 a,
 a:active,
 a:hover {
